# SDLGameTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  configure.bat  configure.sh
assets/: readme.txt
src/: engine.cpp  engine.h  main.cpp  sprite.cpp  sprite.h
